--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -30,7 +30,7 @@
 
             {% for frame in lis %}
 
-            <img src="/img/{{ frame[0] }}" class="minimized" maximize="/img/{{ frame[1] }}">
+            <img src="/img/{{ frame[0] }}" class="minimized" maximize="/img/{{ frame[1] }}" gifi ="/img/{{ frame[2] }}">
             {% endfor %}
             </div>
             <div class="time">
