--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -22,10 +22,12 @@
     {% for ddd,dic in restoredDict.items() %}
     <ul id="first-list">
         {% for hhh,lis in dic.items() %}
-        <li style='background-color:rgba(255, 255, 255, 0.1);'>
+        <li id="{% if hhh == lastHour and ddd == LastDay %}lastDay{% endif %}" style='background-color:rgba(255, 255, 255, 0.1);'>
             <span></span>
-            <div class="title">{{ hhh }}</div>
-            <div class="info">
+            <div class="title" id="{% if hhh == lastHour and ddd == LastDay %}lastHour{% endif %}">
+                {{ hhh }}
+            </div>
+            <div class="info" id="{% if hhh == lastHour and ddd == LastDay %}lastList{% endif %}">
 
 
             {% for frame in lis %}
